--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -12,7 +12,7 @@
     <span>Get in touch </span>
     <span class="emoji pointer"></span>
     <span>
-      <a href="mailto:mahamfkhan@hotmail.com" target="_blank" class="highlight-link">mahamfkhan@gmail.com</a>
+      <a href="mailto:mahamfkhan@hotmail.com" target="_blank" class="highlight-link">mahamfkhan@hotmail.com</a>
     </span>
   </h3>
 </header>
