--- a/_includes/background.html
+++ b/_includes/background.html
@@ -11,14 +11,16 @@
     </p>
 
     <p>
-      As a software engineer, I enjoy bridging the gap between engineering and design &mdash; combining my technical knowledge
-      with my keen eye for design to create a beautiful product. My goal is to always build applications that are scalable
-      and efficient under the hood while providing engaging, pixel-perfect user experiences.
+      Welcome to my corner of the web. 
+
+      Data is everywhere, whether we like it or not––and I'm interested in using data to design better lives, systems and products for us old humans.
+
+      How do people move in a city? How do we amplify voices equitable in organizations? What does ed tech mean for the future of learning? How do we use customer interactions to design products that people love?
+      These are some of the questions I have sought to answer--one dataset at a time.
     </p>
 
     <p>
-      <strong>When I'm not in front of a computer screen</strong>, I'm probably snowboarding, cruising around on my penny board,
-      or crossing off another item on my bucket list.
+      <strong>When I'm not in front of a computer screen</strong>, I'm probably on a hammock in East London, scrolling on a smaller screen.
     </p>
 
     <!-- {% include employment-status.html %} -->
