--- a/_includes/background.html
+++ b/_includes/background.html
@@ -1,14 +1,7 @@
 <section class="section background">
   <div class="section__title">Background</div>
   <div class="section__content">
-    <p>
-      I'm currently an Engineer at
-      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> building things for the web with some awesome people. I recently graduated from
-      <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> after completing three awesome six-month co-ops at
-      <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>,
-      <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and
-      <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple Music</a>.
-    </p>
+
 
     <p>
       Welcome to my corner of the web. 
@@ -20,9 +13,19 @@
     </p>
 
     <p>
+      I'm currently an Senior Data Scientist at
+      <a class="underline-link" href="https://youview.com/" target="_blank">YouView</a>, where I lead data insights, experimentation and business intelligence for the company. 
+      I have a degree in data science with a focus on urban informatics from
+      <a class="underline-link" href="http://www.nyu.edu/" target="_blank">New York University</a> and a background in philosophy and experimental psychology, which I read at the
+      <a class="underline-link" href="https://ox.ac.uk/" target="_blank">University of Oxford</a>.      
+    </p>
+    
+    <p>
       <strong>When I'm not in front of a computer screen</strong>, I'm probably on a hammock in East London, scrolling on a smaller screen.
     </p>
 
+
+    
     <!-- {% include employment-status.html %} -->
   </div>
 </section>
