--- a/_includes/background.html
+++ b/_includes/background.html
@@ -1,5 +1,5 @@
 <section class="section background">
-  <div class="section__title">Background</div>
+  <div class="section__title">Summary</div>
   <div class="section__content">
 
 
