--- a/_includes/background.html
+++ b/_includes/background.html
@@ -2,23 +2,22 @@
   <div class="section__title">Summary</div>
   <div class="section__content">
 
-
     <p>
-      Welcome to my corner of the web. 
-
-      Data is everywhere, whether we like it or not––and I'm interested in using data to design better lives, systems and products for us old humans.
-
-      How do people move in a city? How do we amplify voices equitable in organizations? What does ed tech mean for the future of learning? How do we use customer interactions to design products that people love?
-      These are some of the questions I have sought to answer--one dataset at a time.
-    </p>
-
-    <p>
-      I'm currently an Senior Data Scientist at
+      Welcome to my corner of the web. I'm currently a Senior Data Scientist at
       <a class="underline-link" href="https://youview.com/" target="_blank">YouView</a>, where I lead data insights, experimentation and business intelligence for the company. 
-      I have a degree in data science with a focus on urban informatics from
+      I have a degree in data science, with a focus on urban informatics, from
       <a class="underline-link" href="http://www.nyu.edu/" target="_blank">New York University</a> and a background in philosophy and experimental psychology, which I read at the
       <a class="underline-link" href="https://ox.ac.uk/" target="_blank">University of Oxford</a>.      
     </p>
+    
+    <p>
+      
+      Data is everywhere, whether we like it or not&emdashand I'm interested in using data to design better lives, systems and products for us old humans.\n\n
+
+      How do people move in a city? How do we amplify voices equitably in organizations? What is the future of learning? How can customer interactions help design products that people love?
+      These are some of the questions I seek to answer&mdashone dataset at a time.
+    </p>
+
     
     <p>
       <strong>When I'm not in front of a computer screen</strong>, I'm probably on a hammock in East London, scrolling on a smaller screen.
