--- a/_includes/background.html
+++ b/_includes/background.html
@@ -4,7 +4,7 @@
 
     <p>
       Welcome to my corner of the web. I'm currently a Senior Data Scientist at
-      <a class="underline-link" href="https://youview.com/" target="_blank">YouView</a>, where I lead data insights, experimentation and business intelligence for the company. 
+      <a class="underline-link" href="https://youview.com/" target="_blank">YouView</a>, where I lead our data insights, experimentation and business intelligence team. 
       I have a degree in data science, with a focus on urban informatics, from
       <a class="underline-link" href="http://www.nyu.edu/" target="_blank">New York University</a> and a background in philosophy and experimental psychology, which I read at the
       <a class="underline-link" href="https://ox.ac.uk/" target="_blank">University of Oxford</a>.      
@@ -12,10 +12,10 @@
     
     <p>
       
-      Data is everywhere, whether we like it or not&emdashand I'm interested in using data to design better lives, systems and products for us old humans.\n\n
+      Data is everywhere, whether we like it or not&emdash;and I'm interested in data as a means to design better lives, systems and products for <emphasis>us old humans</emphasis>.\n\n
 
       How do people move in a city? How do we amplify voices equitably in organizations? What is the future of learning? How can customer interactions help design products that people love?
-      These are some of the questions I seek to answer&mdashone dataset at a time.
+      These are some of the questions I seek to answer&mdash;one dataset at a time.
     </p>
 
     
