--- a/_includes/background.html
+++ b/_includes/background.html
@@ -12,7 +12,7 @@
     
     <p>
       
-      Data is now everywhere&emdash;wittingly or unwittingly&mdash;and I'm interested in employing data as a means to design better lives, systems and products for <emphasis>us old humans</emphasis>.<br><br>
+      Data is now everywhere&mdash;wittingly or unwittingly for us old humans&mdash;and I'm interested in leveraging this ubiquity of data to design products and systems that enhance people's lives.<br><br>
 
       How do people move in a city? How do we amplify voices equitably in organizations? What is the future of learning? How can customer interactions help design products that people love?
       These are some of the questions I seek to answer&mdash;one dataset at a time.
