--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -12,25 +12,25 @@
         </ul>
       </div>
       <div class="skillz__category">
-        <div class="skillz__category__label">Frameworks</div>
+        <div class="skillz__category__label">Data Science</div>
         <ul>
-          {% for framework in site.data.skills.frameworks %}
+          {% for framework in site.data.skills.data-science %}
           <li class="skillz__category__item">{{framework.item}}</li>
           {% endfor %}
         </ul>
       </div>
       <div class="skillz__category">
-        <div class="skillz__category__label">Tools</div>
+        <div class="skillz__category__label">Front-end</div>
         <ul>
-          {% for tool in site.data.skills.tools %}
+          {% for tool in site.data.skills.front-end %}
           <li class="skillz__category__item">{{tool.item}}</li>
           {% endfor %}
         </ul>
       </div>
       <div class="skillz__category">
-        <div class="skillz__category__label">Design</div>
+        <div class="skillz__category__label">Dev tools</div>
         <ul>
-          {% for thing in site.data.skills.design %}
+          {% for thing in site.data.skills.dev-tools %}
           <li class="skillz__category__item">{{thing.item}}</li>
           {% endfor %}
         </ul>
