--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <header class="intro">
-  <h1 class="intro__hello">Hello!
+  <h1 class="intro__hello">Hello! Welcome to my corner of the web.
     <span class="emoji wave-hand animated"></span>
   </h1>
 
