--- a/_includes/background.html
+++ b/_includes/background.html
@@ -3,7 +3,7 @@
   <div class="section__content">
 
     <p>
-      Welcome to my corner of the web. I'm currently a Senior Data Scientist at
+      I'm currently a Senior Data Scientist at
       <a class="underline-link" href="https://youview.com/" target="_blank">YouView</a>, where I lead our data insights, experimentation and business intelligence team. 
       I have a degree in data science, with a focus on urban informatics, from
       <a class="underline-link" href="http://www.nyu.edu/" target="_blank">New York University</a> and a background in philosophy and experimental psychology, which I read at the
