--- a/_includes/other-projects.html
+++ b/_includes/other-projects.html
@@ -1,5 +1,5 @@
-<!-- <section class="section other-projects">
-  <div class="section__title">Other Projects</div>
+<section class="section other-projects">
+  <div class="section__title">Data science courses</div>
   <div class="section__content">
     {% for project in site.data.other-projects %}
     <div class="project">
@@ -16,4 +16,4 @@
     {% endfor %}
   </div>
 </section>
- -->
+
