--- a/_includes/other-projects.html
+++ b/_includes/other-projects.html
@@ -1,4 +1,4 @@
-<section class="section other-projects">
+<!-- <section class="section other-projects">
   <div class="section__title">Data science courses</div>
   <div class="section__content">
     {% for project in site.data.other-projects %}
@@ -17,3 +17,4 @@
   </div>
 </section>
 
+ -->
