--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -1,22 +1,21 @@
-<!-- <section class="section featured-projects">
-  <div class="section__title">Featured Projects</div>
+<section class="section featured-projects">
+  <div class="section__title">Featured projects</div>
   <div class="section__content">
-    <div class="project blistabloc">
+    <div class="project DataCamp">
       <figure class="project__pic">
         <a href="https://blistabloc.com/" target="_blank">
-          <img src="{{site.baseurl}}/img/featured/blistabloc/blistabloc.png" alt="">
+          <img src="https://www.reviewhouse.com/wp-content/uploads/2021/11/datacamp-review-banner-001-1024x576.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
           <a href="https://blistabloc.com/" target="_blank">blistabloc</a>
         </div>
-        <p>Custom wordpress theme built with Timber and Woocommerce for blistabloc, the only reactive shoe insert that prevents
-          blisters from forming.</p>
+        <p>Designed interactive courses for learning a multitude of data science skills, including advanced SQL joins, deep learning, and statistical inference.</p>
       </figcaption>
     </div>
 
-    <div class="project screentime">
+<!--     <div class="project screentime">
       <figure class="project__pic phones">
         <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
           <div class="phone">
@@ -51,7 +50,7 @@
         </div>
         <p>Interactive marketing website for Northeastern's first annual student-led design conference, Interventions.</p>
       </figcaption>
-    </div>
+    </div> -->
   </div>
 </section>
- -->
+
