--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -3,13 +3,13 @@
   <div class="section__content">
     <div class="project DataCamp">
       <figure class="project__pic">
-        <a href="https://blistabloc.com/" target="_blank">
+        <a href="https://www.datacamp.com/portfolio/mahamfaisalkhan" target="_blank">
           <img src="https://www.reviewhouse.com/wp-content/uploads/2021/11/datacamp-review-banner-001-1024x576.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://blistabloc.com/" target="_blank">blistabloc</a>
+          <a href="https://www.datacamp.com/portfolio/mahamfaisalkhan" target="_blank">datacamp</a>
         </div>
         <p>Designed interactive courses for learning a multitude of data science skills, including advanced SQL joins, deep learning, and statistical inference.</p>
       </figcaption>
