--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -9,7 +9,7 @@
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://www.datacamp.com/portfolio/mahamfaisalkhan" target="_blank">datacamp</a>
+          <a href="https://www.datacamp.com/portfolio/mahamfaisalkhan" target="_blank">DataCamp</a>
         </div>
         <p>Designed interactive courses for learning a multitude of data science skills, including advanced SQL joins, deep learning, and statistical inference.</p>
       </figcaption>
