--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -11,7 +11,7 @@
         <div class="project__name">
           <a href="https://www.datacamp.com/portfolio/mahamfaisalkhan" target="_blank">DataCamp</a>
         </div>
-        <p>Designed interactive courses for learning a multitude of data science skills, including advanced SQL joins, deep learning, and statistical inference.</p>
+        <p>Making data skills available to everyone through interactive coursess from advanced SQL joins, to deep learning in PyTorch and statistical inference in Python.</p>
       </figcaption>
     </div>
 
