--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -15,30 +15,29 @@
       </figcaption>
     </div>
 
-<!--     <div class="project screentime">
+    <div class="project mobility">
       <figure class="project__pic phones">
-        <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">
+        <a href="https://blogs.worldbank.org/en/eastasiapacific/confronting-covid-19-second-waves-how-big-data-good-can-inform-policy-vietnam" target="_blank">
           <div class="phone">
-            <img src="{{site.baseurl}}/img/featured/screentime/screentime1.png" alt="">
+            <img src="https://s7d1.scene7.com/is/image/wbcollab/46486-1?qlt=90&fmt=webp&resMode=sharp2" alt="">
           </div>
-          <div class="phone">
+<!--           <div class="phone">
             <img src="{{site.baseurl}}/img/featured/screentime/screentime3.png" alt="">
           </div>
           <div class="phone">
             <img src="{{site.baseurl}}/img/featured/screentime/screentime4.png" alt="">
-          </div>
+          </div> -->
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://play.google.com/store/apps/details?id=com.starry.management" target="_blank">ScreenTime 2.0</a>
+          <a href="https://blogs.worldbank.org/en/eastasiapacific/confronting-covid-19-second-waves-how-big-data-good-can-inform-policy-vietnam" target="_blank">Human mobility data</a>
         </div>
-        <p>Starry Station feature that provided users with the ability to easily filter content, pause the internet, and even
-          create custom rules for blocking apps like Facebook and Twitter right from their phones.</p>
+        <p>Unlocking insights from human mobility data to inform policy in Vietnam following the second wave of COVID-19.</p>
       </figcaption>
     </div>
 
-    <div class="project interventions">
+<!--     <div class="project interventions">
       <figure class="project__pic">
         <a href="https://interventions.design/" target="_blank">
           <img src="{{site.baseurl}}/img/featured/interventions/interventions.png" alt="">
