--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -19,7 +19,7 @@
       <figure class="project__pic phones">
         <a href="https://blogs.worldbank.org/en/eastasiapacific/confronting-covid-19-second-waves-how-big-data-good-can-inform-policy-vietnam" target="_blank">
           <div class="phone">
-            <img src="https://s7d1.scene7.com/is/image/wbcollab/46486-1?qlt=90&fmt=webp&resMode=sharp2" alt="">
+            <img src="https://blogs.worldbank.org/content/dam/sites/blogs/img/detail/mgr/46486-0.png" alt="">
           </div>
 <!--           <div class="phone">
             <img src="{{site.baseurl}}/img/featured/screentime/screentime3.png" alt="">
