--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -37,19 +37,26 @@
       </figcaption>
     </div>
 
-<!--     <div class="project interventions">
+    <div class="project mobilkit">
       <figure class="project__pic">
-        <a href="https://interventions.design/" target="_blank">
-          <img src="{{site.baseurl}}/img/featured/interventions/interventions.png" alt="">
+        <a href="https://mobilkit.readthedocs.io/en/latest/" target="_blank">
+          <img src="{{site.baseurl}}/img/featured/mobilkit/mobilkit.png" alt="">
         </a>
       </figure>
       <figcaption class="project__caption">
         <div class="project__name">
-          <a href="https://interventions.design/" target="_blank">Interventions</a>
+          <a href="https://mobilkit.readthedocs.io/en/latest/" target="_blank">Mobilkit</a>
         </div>
-        <p>Interactive marketing website for Northeastern's first annual student-led design conference, Interventions.</p>
+        <p>Mobilkit is an open-source Python software toolkit that enables policy makers to conduct
+          post-disaster assessment using large-scale mobility data. The toolkit allows the user to conduct
+          pre-processing of data, validation of the data representativeness, home and office location
+          estimation, post-disaster displacement analysis, and point-of-interest visit analysis. The purpose
+          of Mobilkit is to provide urban planners, disaster policy makers, and researchers an easy-to-use
+          and practical toolkit to visualize, analyze, and monitor post-disaster disruption and recovery.
+          The software is freely-available on GitHub along with online documentation and Jupyter
+          Notebooks that provide step-by-step tutorials.</p>
       </figcaption>
-    </div> -->
+    </div>
   </div>
 </section>
 
