--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -47,14 +47,8 @@
         <div class="project__name">
           <a href="https://mobilkit.readthedocs.io/en/latest/" target="_blank">Mobilkit</a>
         </div>
-        <p>Mobilkit is an open-source Python software toolkit that enables policy makers to conduct
-          post-disaster assessment using large-scale mobility data. The toolkit allows the user to conduct
-          pre-processing of data, validation of the data representativeness, home and office location
-          estimation, post-disaster displacement analysis, and point-of-interest visit analysis. The purpose
-          of Mobilkit is to provide urban planners, disaster policy makers, and researchers an easy-to-use
-          and practical toolkit to visualize, analyze, and monitor post-disaster disruption and recovery.
-          The software is freely-available on GitHub along with online documentation and Jupyter
-          Notebooks that provide step-by-step tutorials.</p>
+        <p>Mobilkit is an open-source Python toolkit that enables policymakers to conduct
+          post-disaster assessment using large-scale mobility data.</p>
       </figcaption>
     </div>
   </div>
