--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="project mobility">
-      <figure class="project__pic phones">
+      <figure class="project__pic">
         <a href="https://blogs.worldbank.org/en/eastasiapacific/confronting-covid-19-second-waves-how-big-data-good-can-inform-policy-vietnam" target="_blank">
           <div class="phone">
             <img src="{{site.baseurl}}/img/featured/vietnam/vietnam.png" alt="">
